# realign

./: .gitignore  LICENSE  MANIFEST.in  README.md  doc.md  pyproject.toml  requirements.txt
docs/: CONCEPTS.md  GUIDES.md  REFERENCE.md  TUTORIALS.md
examples/: content_agent.py  evals.py  example_chat_evaluation.py  example_chat_simulation.py  generate_info_bites.py  info_prompt.txt  learning_channel_exporter.py  tutor_agent.py
examples/content_agent/: base_content_repo.csv  config.yaml  content_agent.py  generate_info_bites.py  info_bites.csv  learning_channel_exporter.py  processed_links.txt
examples/simulation_with_config/: config.yaml  config_simulation.py
examples/tweetbot/: config.yaml  tweetbot.py
src/agentsim/: AbstractAgent.py  ConfigLoader.py  Simulator.py  __init__.py  config.yaml  datasets.py  evaluation.py  prompts.py  types.py  utils.py
src/realign/: EVAL_DX.txt  __init__.py  agents.py  base_class.py  config.py  configs.py  datasets.py  defaults.yaml  eval_data.json  eval_utils.py  evallib.py  evals.py  evaluation.py  evaluators.py  llm_utils.py  prompts.py  router.py  run_data.json  simulation.py  templates.yaml  test.py  tracing.py  tutor_agent.py  types.py  utils.py
test/: async_fail.py  async_test.py  config.yaml  cpu_io_bound.py  dotdict.py  router_test.py  test_evaluator.py  test_parallelize.py
tests/: config.yaml  evals.py  is_professional_style.py  run_sim.py  run_toxicity.py  sample_toxicity_evaluator.py  test.py  test_base_class.py  test_evaluation.py  test_simulation.py
tests/evaluators/: Evaluator_Checklist.txt  prompt_clarification_evaluator.py  sample_toxicity_evaluator.py  test_adaptive_behavior.py  test_code_efficiency.py  test_code_reusability.py  test_code_style_adherence.py  test_coherence.py  test_conciseness_adherence.py  test_consistency.py  test_content_exclusion.py  test_content_inclusion.py  test_content_relevance.py  test_context_integration.py  test_context_retention.py  test_conversation_management.py  test_creative_application.py  test_data_integration.py  test_documentation_quality.py  test_error_handling.py  test_error_recovery.py  test_example_emulation.py  test_factual_accuracy.py  test_goal_adherence.py  test_information_accumulation.py  test_internal_consistency.py  test_keyword_assertion.py  test_message_limit.py  test_objectivity_maintenance.py  test_performance_optimization.py  test_personalization_level.py  test_process_description.py  test_prompt_clarification_handling.py  test_quality_criteria_adherence.py  test_quantity_compliance.py  test_response_format_following.py  (+11 more)
tutorials/: evaluators.py  test.py
(+60 files in other folders)
