[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realign"
version = "0.1.38"
dependencies = [
    "litellm",
    "jinja2",
    "python-dotenv",
    "llama-index>=0.10.56,<0.11.0",
]

description = "Realign is a simulation based evaluation framework for multi-step agents."
readme = "README.md"
authors = [
    {name = "HoneyHive", email = "support@honeyhive.ai"},
]
license = {text = "MIT License"}
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pylint==2.16.2", "pip-tools>=7.4.1"]

[project.urls]
Documentation = "https://docs.honeyhive.ai/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
realign = ["**/*.yaml", "persona-hub/*/*"]
